--- a/level7/homework/index.html
+++ b/level7/homework/index.html
@@ -2,4 +2,4 @@
 <p>არ ვარ დაკავებული რაიმე სპორტით.ვცეკვავდი 9 წელი,და დროებით ვარ გაჩერებული,თუმცა ვაპირებ გაგრძელებას.</p>
 <p>პროგრამირებთ დავინტერესდი დაახლოებით ერთი წელია,აქამდე ამ სფერიში არ მიმიღია არანაირი განათლება.</p>
 <p>ამჟამად ვსწავლობ Goal-Oriented Academy • GOA-ში.და ამ მომენტში ჩემი წოდება არის რაზმის მინი ლიდერი.</p>
-
+<img src="https://scontent.ftbs5-2.fna.fbcdn.net/v/t39.30808-1/408864179_342479481868687_2724919989645877908_n.jpg?stp=c40.0.200.200a_dst-jpg_p200x200&_nc_cat=1&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeFm_VZo0K20uQTdm9a7WXCNW7tgzUOr-gxbu2DNQ6v6DHExgmghD_DUerWoU8l7otQFTyE0ox015VMktX6_y-RJ&_nc_ohc=okvfJmb9Ta8Q7kNvgHMzCB0&_nc_ht=scontent.ftbs5-2.fna&oh=00_AYDbJA7gcxPbop8GkJTHWRCWcx_i1MjsyfN1z6isKx73lQ&oe=6667A355" width="350">
