--- a/level11/classwork/page2.html
+++ b/level11/classwork/page2.html
@@ -1,2 +1,4 @@
-<h1>hello</h1>
-<a href="http://127.0.0.1:5500/level11/classwork/page3.html" target="_blank">third page</a>
+<h1>hello
+goa is the best
+</h1>
+<a href="page3.html">third page</a>
