--- a/level11/classwork/page3.html
+++ b/level11/classwork/page3.html
@@ -1,2 +1,14 @@
 <h1>group 27,level11</h1>
-<a href="" target="_blank">third page</a>
+<p>არ გსურს შენმა შვილმა ზაფხული ვიდეოთამაშებსა 🎮 და 📲 ტელეფონის სქროლვაში გაატაროს  ?
+    💚ის საუკეთესოს იმსახურებს 📈
+    ✅უკეთესი ალტერნატივისთვის უყურეთ ვიდეოს ბოლომდე 💌
+    📅2024 წლის 24 ივნისს ვიწყებთ პროგრამირების საზაფხულო სკოლის ახალ ნაკადს. 
+    🤵‍♂️(მინიმალური ასაკი: 9 წელი)
+    🟢გაკვეთილები ჩატარდება კვირაში სამჯერ, ორჯერ, ან ერთხელ(როგორც აირჩევთ)
+    3️⃣კვირაში 3-ჯერ:-- კურსის თვიური ღირებულება არის ფასდაკლებით: 390 ლარი, ნაცვლად - 740 ლარისა.
+    2️⃣კვირაში 2-ჯერ:-- კურსის თვიური ღირებულება არის ფასდაკლებით: 290 ლარი, ნაცვლად - 560 ლარისა.
+    1️⃣კვირაში 1-ხელ:-- კურსის თვიური ღირებულება არის ფასდაკლებით: 170 ლარი, ნაცვლად - 340 ლარისა.
+    🟢საბაზისო ეტაპის ხანგრძლივობა არის 1 წელი, ხოლო სიღრმისეული კურსი - 2.5 წელი(დამოკიდებულია მოსწავლის მიზნებზე) 
+    🟢წარმატებული სტუდენტები 100%-იანი გარანტიით საქმდებიან Goal-Oriented Academy • GOA-ში და პარტნიორ კომპანიებში.
+    👇კონსულტაციისთვის მოგვწერეთ პირად შეტყობინებაში მესიჯი:</p>
+<a href="http://127.0.0.1:5500/level11/classwork/page1.html">first page</a>
