--- a/level11/classwork/page1.html
+++ b/level11/classwork/page1.html
@@ -1,8 +1,10 @@
 <!-- BONUS boss classwork
  შექმენით ისეთი საიტი სადაც გექნებათ სამი გვერდი და ეს სამი გვერდი ერთმანეთთან დააკავშირეთ ჰაიპერ ლინკის საშუალებით -->
 <img src="https://scontent.ftbs5-2.fna.fbcdn.net/v/t39.30808-6/448585856_1042364367456974_2366030561031240143_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_
-eui2=AeF-sPSdfbpCLEAdmuN9PKl14QHFYh1XhmrhAcViHVeGaqSQY4JebRjvxzexYTNcHAO0oY4667AbRf6Tl_x15Jk1&_nc_ohc=igxrcOFO2hYQ7kNvgEnCz8C&_nc_ht=scontent.ftbs5-2.fna&oh=00_AYAo6F9r
-Ody6PgNwdCFl4i-RC-D3KiF3YAM0kljOirRlhA&oe=667C6318" alt="goa" vidth ="300" height="300">
-
-<a href="http://127.0.0.1:5500/level11/classwork/page2.html" target="_blank">second page</a>
+eui2=AeF-sPSdfbpCLEAdmuN9PKl14QHFYh1XhmrhAcViHVeGaqSQY4JebRjvxzexYTNcHAO0oY466alt7AbRf6Tl_x15Jk1&_nc_ohc=igxrcOFO2hYQ7kNvgEnCz8C&_nc_ht=scontent.ftbs5-2.fna&oh=00_AYAo6F9r
+Ody6PgNwdCFl4i-RC-D3KiF3YAM0kljOirRlhA&oe=667C6318" alt="goa" width="300" height="300">
+<h3>საქართველოში ერთადერთი და ყველაზე სანდო აკადემია, რომელიც გიდგებათ პერსონალურად,
+     ადამიანურად და ბოლომდე გეხმარებათ ცხოვრებისეული პრობლემების აღმოფხვრაში
+</h3>
+<a href="page2.html">second page</a>
 
