--- a/level9/homework/index.html
+++ b/level9/homework/index.html
@@ -20,5 +20,5 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam asperiores l
 <button>more info</button>
 <h5>how do you think about us</h5>
 
-<img src="https://avatars.mds.yandex.net/i?id=de424bd89116ef24852743fc0e5d5e4bda525a3d-12422391-images-thumbs&n=13" alt="300"
+<img src="https://avatars.mds.yandex.net/i?id=de424bd89116ef24852743fc0e5d5e4bda525a3d-12422391-images-thumbs&n=13" alt="300">
 <h6>Thanks.GoodBye</h6>
